# recruitment-task

./: .env.template  .gitignore  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
app/: Dockerfile  pyproject.toml  wait-for-db.sh
app/src/: api_urls.py  settings.py  urls.py
app/src/books/: admin.py  api_urls.py  api_views.py  apps.py  enums.py  filters.py  forms.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
app/src/books/migrations/: 0001_initial.py  0001_initial_squashed_0004_alter_book_isbn.py  0002_auto_20210705_1121.py  0002_auto_20210705_1659.py  0003_alter_book_isbn.py
app/src/templates/: base.html
app/src/templates/books/: book-confirm-delete.html  book-create.html  book-import.html  book-list.html  book-update.html
app/tests/: conftest.py
app/tests/test _apps/test_books/: test_services.py  test_validators.py
